--- a/index.html
+++ b/index.html
@@ -145,6 +145,19 @@
               </form>
             </div>
         </div>
+        <div class="toast-container position-fixed bottom-0 end-0 p-3">
+            <div data-bs-autohide="false" class="toast" id="mensagens-alerta">
+                <header class="toast-header">
+                    <strong>Importante</strong>
+                </header>
+                <div class="mt-2 pt-2 boder-top">
+                    <div class="toast-body">
+                        Você possui 10 mensagem não lidas
+                        <button data-bs-dismiss="toast" class="btn btn-danger">Descartar</button>
+                    </div>
+                </div>
+            </div>
+        </div>
 </body>
 <script src="./lib/bootstrap.bundle.min.js"></script>
 <script>
